recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:7: error: not found: value sierpinksi
    sierpinksi(levels-1,length/2)
    ^